# community_platform

./: .deepsource.toml  .dev-registry.json  .editorconfig  .gitattributes  .gitignore  .npmrc  Cargo.toml  Makefile  README.en.md  README.md  biome.json  clippy.toml  commitlint.config.js  lint-staged.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.app.json  tsconfig.base.json  tsconfig.json  tsconfig.lib.json  tsconfig.test.json  vitest.config.ts
.cargo/: config.toml
.codebuddy/: CODEBUDDY.md
.codebuddy/memory/: 2026-03-20.md  2026-03-21.md  2026-03-22.md  2026-03-23.md  2026-04-02.md  2026-04-04.md  2026-04-06.md
.codebuddy/plans/: article-actions-style-refactor_f3051d84.md  batch-openspec-platform-upgrades_b4ada4da.md  complete-openspec-proposals_c488910b.md  fix-md-parser-build-errors_8d37cfa4.md  fix-md-parser-packages_d262fda4.md  markdown-parser-package-overhaul_0a49fdef(未完成).md  markdown-parser-package-overhaul_1d79e3c2(未完成).md  markdown-parser-package-overhaul_b897ef73(未完成).md  markdown-parser-package-overhaul_cd4f80bc.md  update-openspec-audit-findings_9811e0a6.md
.codebuddy/rules/: backend-architecture.mdc  frontend-structure.mdc  luhanxin-community-platform-conventions.mdc  openspec-workflow.mdc  tech-iteration-log.mdc
.github/: AI_REVIEW_README.md
.github/workflows/: ai-code-review.yml
apps/feed/: README.en.md  README.md  index.html  package.json  tsconfig.json  vite.config.js  vite.config.ts
apps/main/: .env.example  README.en.md  README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/user-profile/: README.en.md  README.md  index.html  package.json  vite.config.ts
crates/shared/: README.md
demo/: README.md
demo/react-app/: index.html  package.json  tsconfig.json  vite.config.ts
demo/vue-app/: index.html  package.json  tsconfig.json  vite.config.ts
docker/: .env.example  README.en.md  README.md  docker-compose.yml
docs/reading/: 01-frontend.md  02-backend.md  03-fundamentals.md  04-ai.md  05-engineering.md  06-security.md  07-growth.md  (+1 more)
e2e/: example.spec.ts
openspec/: config.yaml
proto/: README.en.md  README.md  buf.gen.yaml  buf.yaml
scripts/: build-preview.sh  dev.sh  gen-proto-mod.sh  seed.sql  set-deepsource-secret.sh  setup-ai-review.sh
services/: Cargo.toml  README.en.md  README.md  apiTester.http
services/gateway/: Cargo.toml  README.en.md  README.md
services/gateway/src/: config.rs  main.rs  resolver.rs
services/gateway/src/dto/: article.rs  comment.rs  common.rs  mod.rs  social.rs  user.rs
services/gateway/src/interceptors/: mod.rs
services/gateway/src/interceptors/auth/: mod.rs
services/gateway/src/interceptors/log/: mod.rs
services/gateway/src/interceptors/retry/: mod.rs
services/gateway/src/middleware/cors/: mod.rs
services/gateway/src/routes/: helpers.rs  mod.rs
services/gateway/src/routes/article/: mod.rs
services/gateway/src/routes/comment/: mod.rs
services/gateway/src/routes/health/: mod.rs
services/gateway/src/routes/social/: mod.rs
services/gateway/src/routes/upload/: mod.rs
services/gateway/src/routes/user/: mod.rs
services/gateway/src/services/: mod.rs
services/gateway/src/services/article/: mod.rs
services/gateway/src/services/comment/: mod.rs
services/gateway/src/services/event_publisher/: mod.rs
services/gateway/src/services/notification/: mod.rs
services/gateway/src/services/search/: mod.rs
services/gateway/src/services/social/: mod.rs
services/gateway/src/services/user/: mod.rs
services/gateway/src/worker/: mod.rs
services/gateway/src/worker/retry_worker/: mod.rs
services/migration/: Cargo.toml  README.en.md  README.md
services/migration/src/: lib.rs  m20260329_000001_create_users.rs  m20260329_000002_create_articles.rs  m20260330_000001_add_user_social_fields.rs  m20260402_000001_enable_pg_trgm.rs  m20260402_000002_add_article_category.rs  m20260402_000003_category_to_categories.rs  m20260403_000001_create_comments.rs  m20260403_000002_create_likes.rs  m20260403_000003_create_favorites.rs  m20260405_000001_create_notifications.rs  m20260406_000001_add_comment_media_attachments.rs
services/shared/: Cargo.toml  README.en.md
services/shared/src/: config.rs  constants.rs  error.rs  lib.rs  net.rs
services/shared/src/auth/: mod.rs
services/shared/src/convert/: mod.rs
services/shared/src/database/: mod.rs
services/shared/src/discovery/: mod.rs
services/shared/src/entity/: articles.rs  comments.rs  mod.rs  prelude.rs  users.rs
services/shared/src/extract/: mod.rs
services/shared/src/messaging/: mod.rs
services/shared/src/proto/luhanxin/community/v1/: luhanxin.community.v1.rs  luhanxin.community.v1.tonic.rs
services/shared/src/redis/: mod.rs
services/svc-content/: Cargo.toml  README.en.md  README.md
services/svc-content/src/: config.rs  error.rs  main.rs
services/svc-content/src/handlers/: mod.rs
services/svc-content/src/handlers/article/: mod.rs
services/svc-content/src/handlers/comment/: mod.rs
services/svc-content/src/handlers/social/: mod.rs
services/svc-content/src/repositories/: mod.rs
services/svc-content/src/repositories/article/: mod.rs
services/svc-content/src/repositories/comment/: mod.rs
services/svc-content/src/repositories/social/: mod.rs
services/svc-content/src/services/article/: mod.rs
services/svc-content/src/services/comment/: mod.rs
services/svc-content/src/services/social/: mod.rs
services/svc-notification/: Cargo.toml
services/svc-notification/src/: config.rs  error.rs  main.rs
services/svc-notification/src/handlers/notification/: mod.rs
services/svc-notification/src/indexer/: mod.rs
services/svc-notification/src/services/notification/: mod.rs
services/svc-notification/src/worker/: mod.rs
services/svc-user/: Cargo.toml  README.en.md  README.md
services/svc-user/src/: config.rs  error.rs  main.rs
services/svc-user/src/handlers/user/: auth.rs  mod.rs  profile.rs
services/svc-user/src/repositories/user/: mod.rs
services/svc-user/src/services/user/: mod.rs
tests/: setup.ts
(+362 files in other folders)
