[workspace]
resolver = "2"
members = [
    "shared",
    "svc-user",
    "gateway",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC / Protobuf
tonic = "0.14"
tonic-prost = "0.14"
tonic-reflection = "0.14"
prost = "0.14"
prost-types = "0.14"

# HTTP / Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "util"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
dotenvy = "0.15"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# ========================
# Workspace Lints
# ========================
[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
# 代码质量
pedantic = { level = "warn", priority = -1 }
# 允许的例外
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# 禁止
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
dbg_macro = "warn"

# ========================
# Profile 优化
# ========================
[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
# 依赖包用 release 编译加速运行
opt-level = 2

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
codegen-units = 1
