[package]
name = "gateway"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
tokio.workspace = true
tonic.workspace = true
tonic-web.workspace = true
prost.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
