[package]
name = "gateway"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
tokio.workspace = true
tonic.workspace = true
tonic-web.workspace = true
prost.workspace = true
prost-types.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
futures = "0.3"

[lints]
workspace = true
