[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenvy.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
