[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenvy.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
async-nats.workspace = true
uuid.workspace = true
hostname.workspace = true
sea-orm.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true

[lints]
workspace = true
