[package]
name = "svc-content"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
tokio.workspace = true
tonic.workspace = true
tonic-health.workspace = true
prost.workspace = true
prost-types.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sea-orm.workspace = true
uuid.workspace = true
chrono.workspace = true
regex = "1"
serde_json.workspace = true
async-nats.workspace = true
base64.workspace = true

[lints]
workspace = true
