[package]
name = "svc-user"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
