[package]
name = "svc-user"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
tokio.workspace = true
tonic.workspace = true
tonic-health.workspace = true
prost.workspace = true
prost-types.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sea-orm.workspace = true
uuid.workspace = true
chrono.workspace = true
bcrypt.workspace = true
serde_json.workspace = true
base64.workspace = true
async-nats.workspace = true

[lints]
workspace = true
